--- a/index.html
+++ b/index.html
@@ -34,9 +34,7 @@
         <h1>Welcome to My Webpage</h1>
     </header>
     <div class="container">
-        <h2>About This Page</h2>
-        <p>This is a simple HTML page to demonstrate a basic structure. Feel free to modify and expand upon this template.</p>
-        <p>To learn more about HTML and web development, visit <a href="https://www.w3schools.com" target="_blank">W3Schools</a>.</p>
+       <h1>This is edited file</h1>
     </div>
 </body>
 </html>
